deprecated Mockito calls replaced with ArgumentMatchers call